--- a/src/main.css
+++ b/src/main.css
@@ -18,10 +18,12 @@
     grid-area: now-playing;
 }
 
-.track:hover #track-no{
-    visibility: hidden;
+.track:hover .track-no,
+.track.selected .track-no {
+    visibility:hidden;
 }
 
-.track:hover #track-play{
+.track:hover .play,
+.track.selected .play{
     visibility: visible;
 }
